<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/calc"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/button"
        android:fontFamily="@font/reg"
        android:text="Calculate !"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psswdTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="337dp"
        android:layout_height="71dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/bold"
        android:text="Calorie calculator"
        android:textColor="@color/gray"
        android:textSize="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:alpha="0.5"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/psswdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="212dp"
        android:alpha="0.5"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="Weight"
        android:inputType="number"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/psswdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/age"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="348dp"
        android:alpha="0.5"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="age"
        android:inputType="number"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/psswdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="TextFields" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="307dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age">

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Female" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>